--- a/JS_hw_10/JS_hw_10_MAIN.html
+++ b/JS_hw_10/JS_hw_10_MAIN.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 
@@ -20,34 +31,85 @@
 </form>
 <div id="output"></div>
 
+<!--==========================-->
+<!--є сторінка, на якій є блок, в якому знаходиться цифра. написати код, який при кожному перезавантажені сторінки буде додавати до неї +1-->
+<div id="counter"></div>
 <script src="JS_hw10_1.js"></script>
 
-<!--==========================-->
-<!--є сторінка, на якій є блок, я кому знаходиьтся цифра. написати код, який при кожному перезавантажені сторінки буде додавати до неї +1-->
+
+<!--index.html-->
+<!--sessions.html-->
 <!--==========================-->
 <!--Є сторінка index.html (назва довільна), при відвідуванні якої в локальне сховще, в масив sessions зберігається інформація про дату та час відвідування сторінки. Є ще сторінка sessions.html (назва довільна), при відвідуванні якої потрібно відмалювати всю інформацію про відвідування сторінки index.html. Інфу НЕ виводити в консоль, а побудувати дом структуру під кожну сессію-->
+
+
+<div id="output2"></div>
+<button id="prevBtn">Prev</button>
+<button id="nextBtn">Next</button>
+<script src="JS_hw10_2.js"></script>
 <!--=========================-->
 <!--зробити масив на 100 об'єктів та дві кнопки prev next-->
 <!--при завантажені сторінки з'являються перші 10 об'єктів.-->
-<!--При натисканні next виводяться настпні 10 об'єктів-->
+<!--При натисканні next виводяться наступні 10 об'єктів-->
 <!--При натисканні prev виводяться попередні 10 об'єктів-->
 
 
-
-
 <!-- - Створити довільний елемент з id = text та створити кнопку.Використовуючи JavaScript, зробіть так, щоб при натисканні на кнопку зникав елемент з id="text".-->
+<div id="text">Произвольный текст</div>
+<button id="hideButton">Скрыть элемент</button>
+<script>
+    // Получаем ссылки на элемент "text" и кнопку
+    let textElement = document.getElementById('text');
+    let hideButton = document.getElementById('hideButton');
 
+    // Добавляем обработчик события на кнопку
+    hideButton.addEventListener('click', function() {
+        // Скрываем элемент "text"
+        textElement.style.display = 'none'; // ??? другие варианты скрытия
+    });
+</script>
 
-<!-- - створити інпут який приймає вік людини та кнопку яка підтверджує дію.При натисканні на кнопку зчитати інформацію з інпуту та перевірити вік чи меньше він ніж 18, та повідомити про це користувача-->
+<!-- - створити інпут який приймає вік людини та кнопку яка підтверджує дію. При натисканні на кнопку зчитати інформацію з інпуту та перевірити вік чи менше він ніж 18, та повідомити про це користувача-->
+<input type="number" id="ageInput" placeholder="Введите возраст">
+<button id="checkButton">Проверить возраст</button>
+
+<script>
+    // Получаем ссылки на инпут и кнопку
+    let ageInput = document.getElementById('ageInput');
+    let checkButton = document.getElementById('checkButton');
+
+    // Добавляем обработчик события на кнопку
+    checkButton.addEventListener('click', function() {
+        // Считываем значение из инпута
+        let age = parseInt(ageInput.value);
+
+        // Проверяем, является ли возраст меньше 18
+        if (age < 18) {
+            // Выводим сообщение об ошибке
+            alert('Возраст должен быть 18 или старше!'); // ??? другие варианты оповещения
+        }
+    });
+</script>
+
 
 
 <!--*** Створити 3 інпута та кнопку. Один визначає кількість рядків, другий - кількість ячеєк, третій вмиіст ячеєк.-->
 <!--При натисканні кнопки, вся ця інформація зчитується і формується табличка, з відповідним вмістом.-->
-<!--(Додатковачастина для завдання)-->
 
-<!--*** (подібне було вище, але...будьте уважні в другій частині) створити сторінку з довільним блоком, в середині якого є значення "100грн"-->
-<!--при перезавантаженні сторінки до значаення додається по 10грн, але !!!-->
-<!--зміна ціни відбувається тільки на перезавантаження, які відбулись пізніше ніж 10 секунд після попереднього.-->
-<!--При перезавантаженні, яке відбулось раніше ніж минуло 10 секунд - нічого не відбувається-->
+
+<!-- Форма для ввода данных -->
+<label for="rowCount">Количество строк:</label>
+<input type="number" id="rowCount" min="1">
+<label for="cellCount">Количество ячеек:</label>
+<input type="number" id="cellCount" min="1">
+<label for="dummyCell">Умышленная ячейка:</label>
+<input type="text" id="dummyCell">
+<button id="generateTable">Создать таблицу</button>
+
+<!-- Контейнер для таблицы -->
+<div id="tableContainer"></div>
+
+<script src="JS_hw10_3.js"></script>
+
 </body>
 </html>
